--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "app-note-taking",
+  "name": "delish",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build-css": "gulp"
+    "build-css": "npx @tailwindcss/cli -i ./public/src/input.css -o ./public/src/output.css --watch"
   },
   "keywords": [],
   "author": "",
